@@ -14,6 +14,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Spliterators;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 import lombok.ToString;
@@ -34,6 +35,7 @@ import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 import org.lmdbjava.BufferProxy;
 import org.lmdbjava.ByteBufferProxy;
+import org.lmdbjava.Cursor;
 import org.lmdbjava.CursorIterable;
 import org.lmdbjava.Dbi;
 import org.lmdbjava.Env;
@@ -119,12 +121,19 @@ public class LMDBPersistence implements Persistence, AddressIterable {
         CLMDBConfigurationReadOnly localLmdbConfigurationReadOnly = Objects.requireNonNull(lmdbConfigurationReadOnly);
         BufferProxy<ByteBuffer> bufferProxy =
                 getBufferProxyByUseProxyOptimal(localLmdbConfigurationReadOnly.useProxyOptimal);
+        // MDB_NORDAHEAD is opt-in: it helps when the database exceeds RAM (a key-ordered walk over a
+        // randomly-keyed store is physically scattered, so OS read-ahead fetches pages that are
+        // evicted before use) and hurts when the database fits, where read-ahead is a genuine win.
+        // See CLMDBConfigurationReadOnly#useNoReadAhead for the measured amplification figures.
+        EnvFlags[] envFlags = localLmdbConfigurationReadOnly.useNoReadAhead
+                ? new EnvFlags[] {EnvFlags.MDB_RDONLY_ENV, EnvFlags.MDB_NOLOCK, EnvFlags.MDB_NORDAHEAD}
+                : new EnvFlags[] {EnvFlags.MDB_RDONLY_ENV, EnvFlags.MDB_NOLOCK};
+        if (localLmdbConfigurationReadOnly.useNoReadAhead) {
+            LOGGER.info("Opening LMDB read-only with MDB_NORDAHEAD (OS read-ahead disabled).");
+        }
         env = Env.create(bufferProxy)
                 .setMaxDbs(DB_COUNT)
-                .open(
-                        new File(localLmdbConfigurationReadOnly.lmdbDirectory),
-                        EnvFlags.MDB_RDONLY_ENV,
-                        EnvFlags.MDB_NOLOCK);
+                .open(new File(localLmdbConfigurationReadOnly.lmdbDirectory), envFlags);
         lmdb_h160ToAmount = env.openDbi(DB_NAME_HASH160_TO_COINT);
     }
 
@@ -196,8 +205,18 @@ public class LMDBPersistence implements Persistence, AddressIterable {
 
     @Override
     public void close() {
-        Dbi<ByteBuffer> localLmdb_h160ToAmount = Objects.requireNonNull(lmdb_h160ToAmount);
-        Env<ByteBuffer> localEnv = Objects.requireNonNull(env);
+        // Null-safe on purpose: close() runs in the caller's finally block, so if init() threw
+        // before these fields were assigned (e.g. an InaccessibleObjectException because the JVM was
+        // launched without the required --add-opens), requireNonNull here would raise a fresh NPE
+        // that MASKS the original failure. The operator would then see a NullPointerException from
+        // close() instead of the real cause. Skip whatever was never opened and let the original
+        // exception propagate.
+        Dbi<ByteBuffer> localLmdb_h160ToAmount = lmdb_h160ToAmount;
+        Env<ByteBuffer> localEnv = env;
+
+        if (localLmdb_h160ToAmount == null || localEnv == null) {
+            return;
+        }
 
         logStatsIfConfigured(false);
         localLmdb_h160ToAmount.close();
@@ -283,6 +302,27 @@ public class LMDBPersistence implements Persistence, AddressIterable {
             iterable.close();
             txn.close();
         });
+    }
+
+    /**
+     * Lower-overhead override of {@link AddressIterable#forEachAddress(Consumer)}: iterates a raw
+     * LMDB {@link Cursor} directly, avoiding the {@code Stream}/{@code Spliterator}/{@code Iterator}
+     * per-entry dispatch of {@link #addresses()}. This is the throughput path used when populating
+     * the in-memory / GPU filters from a large database. The buffer passed to {@code action} is the
+     * cursor's key view, valid only until the next advance — read it immediately, do not retain it.
+     */
+    @Override
+    public void forEachAddress(Consumer<ByteBuffer> action) {
+        Env<ByteBuffer> localEnv = Objects.requireNonNull(env);
+        Dbi<ByteBuffer> localLmdb_h160ToAmount = Objects.requireNonNull(lmdb_h160ToAmount);
+        try (Txn<ByteBuffer> txn = localEnv.txnRead();
+                Cursor<ByteBuffer> cursor = localLmdb_h160ToAmount.openCursor(txn)) {
+            boolean hasNext = cursor.first();
+            while (hasNext) {
+                action.accept(cursor.key());
+                hasNext = cursor.next();
+            }
+        }
     }
 
     @Override
@@ -412,15 +452,13 @@ public class LMDBPersistence implements Persistence, AddressIterable {
         Dbi<ByteBuffer> localLmdb_h160ToAmount = Objects.requireNonNull(lmdb_h160ToAmount);
         Env<ByteBuffer> localEnv = Objects.requireNonNull(env);
 
-        long count = 0;
+        // O(1): LMDB maintains the exact entry count in the database metadata (Stat.entries), so read
+        // it directly instead of iterating every entry with a cursor. The cursor scan is a full pass
+        // over the database — a few seconds on small databases, but tens of minutes on billion-entry
+        // ones (and it ran once here just to size the fingerprint array before construction).
         try (Txn<ByteBuffer> txn = localEnv.txnRead()) {
-            try (CursorIterable<ByteBuffer> iterable = localLmdb_h160ToAmount.iterate(txn, KeyRange.all())) {
-                for (final CursorIterable.KeyVal<ByteBuffer> ignored : iterable) {
-                    count++;
-                }
-            }
+            return localLmdb_h160ToAmount.stat(txn).entries;
         }
-        return count;
     }
 
     @Override
@@ -461,7 +499,6 @@ public class LMDBPersistence implements Persistence, AddressIterable {
         LOGGER.info("IncreasedCounter: " + getIncreasedCounter());
         LOGGER.info("IncreasedSum: " + new ByteConversion().bytesToMib(getIncreasedSum()) + " MiB");
         LOGGER.info("Stat: " + localEnv.stat());
-        // Attention: slow!
         long count = count();
         LOGGER.info("LMDB contains " + count + " unique entries.");
         LOGGER.info("##### END: LMDB stats #####");
